[package]
name = "demo-4AL1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "challenge"
path = "src/challenge.rs"

[[bin]]
name = "start_serverr"
path = "src/start_serverr.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
md5 = "0.7.0"